# epom-dev

./: .gitignore  .replit  DEPLOYMENT.md  build.bat  build.sh  epom_dev.db  pyproject.toml  render.yaml  requirements.txt  start.bat  start.sh
.local/skills/artifacts/: .fingerprint
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/105R33vLrGTyXKpWSwwkJ/: start_application.shell.exec.0
.local/state/workflow-logs/CyVs54kLeJs3rzdnFuW3d/: start_application.shell.exec.0
.local/state/workflow-logs/E6vLfW2W4EkR3eo9z_c2s/: start_application.shell.exec.0
.local/state/workflow-logs/FtUR2PWQGTOolqei4CVbw/: start_application.shell.exec.0
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx  styles.css
client/src/components/: DirectiveModal.jsx  DocumentModal.jsx  EventModal.css  EventModal.jsx
client/src/context/: LanguageContext.jsx
client/src/i18n/: translations.js
client/src/pages/: EAction.jsx  EInfo.css  EInfo.jsx  EInfoEnhancements.css  EInfoNewFeatures.css  ETime.css  ETime.jsx  Login.css  Login.jsx  Personnel.jsx  Reports.jsx
client/src/utils/: api.js  eventColors.js
instance/: epom_dev.db
scripts/: check_all_db_schemas.py  inspect_db.py  migrate_personnel.py  migrate_personnel_instance.py  print_personnel_schema.py  print_schema_serverdb.py
server/: .env.example  .env.production  README.md  app.py  models.py  requirements.txt  start.bat  start.sh
server/api/: actions.py  auth.py  documents.py  events.py  personnel.py
server/instance/: data.db  epom_dev.db
(+6 files in other folders)
